src/deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: netology-homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8080
