src/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: netology-homework
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
