src/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: netology-homework
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
