src/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
  namespace: netology-homework
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 9001
    targetPort: 80
    protocol: TCP
    nodePort: 30001
